Prepare project for deployment and GitHub